# second-year-epitech-projects

./: .gitignore  201yams.hs  203hotline  203hotline.py  205IQ  206neutrinos  207demography  208dowels  Admiral.cpp  Admiral.hpp  Algorithm.hpp  Array.hpp  Borg.cpp  Borg.hpp  BorgQueen.cpp  BorgQueen.hpp  CMakeLists.txt  DoOp.hs  Dockerfile  Enchanter.cpp  Enchanter.hpp  Federation.cpp  Federation.hpp  Game.hs  ICharacter.hpp  Knight.cpp  Knight.hpp  Makefile  My.hs  Paladin.cpp  Paladin.hpp  Peasant.cpp  Peasant.hpp  Priest.cpp  Priest.hpp  README.md  Tree.hs  WarpSystem.cpp  WarpSystem.hpp  append_function.c  (+44 more)
app/: Main.hs
bonus/: Makefile  pushSwapCheckerColor.hs  tests.sh
bootstrap/: easy_functions.c  main.c  test_adress.c
core/: Makefile
ex00/: Banana.cpp  Banana.hpp  Droid.cpp  Droid.hpp  Errors.cpp  Errors.hpp  Fruit.cpp  FruitBox.cpp  FruitBox.hpp  Lemon.cpp  Lemon.hpp  Makefile  Picture.cpp  Picture.hpp  Skat.cpp  Skat.hpp  Toy.cpp  Toy.hpp  my_cat.cpp  z.c
ex01/: AtmosphereRegulator.cpp  Banana.cpp  Droid.cpp  Droid.hpp  DroidMemory.cpp  DroidMemory.hpp  Engine.cpp  Errors.cpp  Fruit.cpp  FruitBox.cpp  FruitBox.hpp  FruitNode.hpp  KoalaBot.cpp  KoalaBot.hpp  Lemon.cpp  Lemon.hpp  LittleHand.cpp  LittleHand.hpp  Makefile  Oxygenator.cpp  Parts.cpp  Parts.hpp  Toy.cpp  Toy.hpp  WaterReclaimer.cpp  mul_div.c  my_convert_temp.cpp
ex02/: Banana.hpp  Buzz.cpp  Buzz.hpp  Coconut.cpp  Coconut.hpp  CommunicationDevice.cpp  Droid.cpp  Droid.hpp  DroidMemory.cpp  DroidMemory.hpp  Fruit.cpp  Fruit.hpp  FruitBox.cpp  KreogCom.cpp  KreogCom.hpp  Lime.cpp  Lime.hpp  LittleHand.cpp  LittleHand.hpp  Picture.hpp  Toy.hpp  Woody.cpp  Woody.hpp  concat.c
ex03/: Picture.cpp  SimplePtr.cpp  Toy.cpp  Toy.hpp  array_1d_to_2d.c
ex04/: Buzz.cpp  Buzz.hpp  Picture.cpp  RefPtr.cpp  Toy.cpp  Toy.hpp  Woody.hpp  print.c
ex05/: Buzz.cpp  Buzz.hpp  Picture.hpp  Toy.cpp  Toy.hpp  Woody.cpp  disp.c  sort.c  (+1 more)
(+1072 files in other folders)
